# data-join-oauth

./: .dockerignore  .gitignore  .rustc_info.json  Cargo.toml  Dockerfile.kube  Dockerfile.local  README.md
.github/workflows/: build-auth-img-dev.yml  depl-auth-img-prod.yml  docker-image-cached.yml
async-redis-session/: Cargo.toml
async-redis-session/src/: lib.rs
oauth/: .crates.toml  .crates2.json  Cargo.toml  notes.txt
oauth/src/: auth.rs  config.rs  constants.rs  errors.rs  lib.rs  main.rs  utils.rs
oauth/src/handlers/: accept_user_form.rs  authenticate.rs  authorize.rs  drive_authorized.rs  favicon.rs  filesystem.rs  login.rs  login_authorized.rs  logout.rs  mod.rs  shared.rs  user_form.rs
oauth/src/middleware/: mod.rs  print_response.rs
oauth/src/models/: auth_failed_redirect.rs  auth_redirect.rs  auth_return.rs  drive_clients.rs  drive_provider.rs  drive_token.rs  files.rs  message.rs  mod.rs  oauth_clients.rs  oauth_provider.rs  project_id.rs  user.rs  user_registration.rs
public/: index.html  login.html
