[package]
edition      = "2021"
name         = "oauth"
rust-version = "1.57"
version      = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# minimize exe size
[profile.release]
codegen-units = 1
lto           = true

[lib]
name = "oauth"
path = "src/lib.rs"

[[bin]]
name = "oauth"
path = "src/main.rs"

[dependencies.redis]
features = ["aio", "async-std-comp", "async-std-tls-comp", "tls", "tokio-comp", "tokio-native-tls-comp"]
version  = "0.21.5"

[dependencies]
anyhow              = "1.0.53"
arc-swap            = "1.5.0"
askama              = "0.11.0"
async-recursion     = "1.0.0"
async-redis-session = { path = "../async-redis-session" }
async-session       = "3.0.0"
axum                = { version = "0.4.4", features = ["headers"] }
axum-extra          = "0.1.1"
axum-macros         = "0.2.1"
base64              = "0.13.0"
bytes               = "1.1.0"
chrono              = "0.4.19"
clap                = { version = "3.0.13", features = ["derive"] }
config              = "0.13"
dotenv              = "0.15"
futures             = "0.3.21"
google-drive3       = "*"
headers             = "0.3"
http                = "0.2"
hyper               = { version = "0.14", features = ["full"] }
lazy_static         = "1.4"
oauth2              = "4.2"
once_cell           = "1.10.0"
percent-encoding    = "2.1.0"
reqwest             = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "cookies"] }
secrecy             = { version = "0.8.0", features = ["serde"] }
serde               = { version = "1.0", features = ["derive"] }
serde_json          = "1.0"
strum               = { version = "0.23", features = ["derive"] }
strum_macros        = "0.23"
thiserror           = "1.0.30"
tokio               = { version = "1.0", features = ["full"] }
tower               = { version = "0.4", features = ["util", "timeout", "filter"] }
tower-http          = { version = "0.2.0", features = ["fs", "set-header", "sensitive-headers", "add-extension", "trace"] }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt", "std"] }
url                 = "2.2.2"
uuid                = { version = "1.0", features = ["v4", "serde"] }
yup-oauth2          = "6.6.0"
# bb8 = "0.7.1"
# bb8-redis = "0.10.1"
# Use Rustls because it makes it easier to cross-compile on CI
